--- a/src/containers/Widgets/AttachmentManager/AttachmentManager.module.css
+++ b/src/containers/Widgets/AttachmentManager/AttachmentManager.module.css
@@ -1,7 +1,7 @@
 .Container {
-  width: 500px; /* TODO fill container */
   border: 1px solid #ccc;
   border-radius: 4px;
+  width: 100%;
 }
 
 .Header {
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 5px;
-  width: 100%;
+  min-width: 400px;
   border-bottom: solid ccc 1px;
 }
 
@@ -21,6 +21,7 @@
 .FileList {
   margin: 0;
   padding: 0px;
+  min-width: 350px;
 }
 
 .FileListItem {
